style changes, moved save button, fixed score shifting

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 body {
     background-color: #1C1B1F;
     width: 100%;
+    height: 100px;
+    
+}
+
+html {
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    
 }
 
 .App {
@@ -147,8 +152,7 @@ img {
     font-size: large;
     font-style: normal;
     position: relative;
-    bottom: 524px;
-    left: 38px;
+    bottom: 512px;
     display: inline-block;
 }
 
@@ -157,33 +161,36 @@ img {
     font-family: "futura";
     font-weight: bolder;
     font-style: normal;
-    font-size: 24pt;
-    position: relative;
-    right: 190px; 
-    bottom: 385px;
-    display: inline-block;
+    font-size: 20pt;
+    position: absolute;
+    font-display: optional;
+    margin: 0 auto;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 110px;  
+    left: 10px;
+    margin: 0;
+    padding: 0
     
 }
 
 .artistcover {
     position: relative;
-    bottom: 260px;
-    left: 0px;
+    bottom: 319px;
     min-width: 167px;
     min-height: 167px;
     max-width: 167px;
     max-height: 167px;
     object-fit: cover;
     margin: 0 auto;
+    display: inline-block;
    
 }
 
-
-
 .save {
     position: relative;
-    left: 170px;
-    bottom: 35px
+    margin: 0 auto;
+    display: inline-block;
 }
 
 .headimage {
@@ -201,4 +208,17 @@ img {
    margin: 0 auto;
    text-align: center;
    justify-content: 0;
+}
+
+.scorebox {
+    background-color: transparent;
+    position: relative;
+    min-width: 135px;
+    min-height: 134px;
+    max-width: 135px;
+    max-height: 134px;
+    bottom: 448px;
+    left: 20px;
+    margin: 0;
+    padding: 0
 }
